fix contrast issue

--- a/main.css
+++ b/main.css
@@ -87,6 +87,7 @@ h2 {
 
 a {
   text-decoration: none;
+  color: #494294;
 }
 
 a:visited {
